chore: Update language and fix layout issues

--- a/_posts/2022-04-19-staj-log-1.md
+++ b/_posts/2022-04-19-staj-log-1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-category: 
+title: 'Staj Logları 1: Her şey büyük bir patlama ile başladı'
+lang: tr
 ---
 
 Selam, belki de başlığı görerek geldiğiniz bu yazı staj yolculuğumla ilgili beklentinizi karşılayacağını umduğum uzun bir serinin başlangıç yazısı olacak. Yazımın hedef kitlesi sanırım en az 1. sınıf bilgisayar mühendisliği öğrencileri veya yazılım ilgilileri olacak çünkü çok ufak da olsa teknik detaylara gireceğim. Tabii meraklısı olan veya bölümü merak eden herkesin başımın üstünde yeri vardır. Bu noktada öncelikle kendimden bahsetmeli ve bu yolculuğun arkaplanında nelerin olduğunu göstermeliyim. Burayı merak etmeyip staj bulma kısmına atlamak isteyenler beklenmedik bir yolculuk başlığına doğru devam edebilir.
@@ -55,5 +56,5 @@ Staj sürecinde sevdiğim şeylerden biri de her hafta yaptıklarımızla alakal
 <hr>
 
 Bu yazı başta planladığımdan farklı bir yönde evrildi fakat bundan sonraki süreci daha iyi anlatabilmem için bu arkaplanı verdiğime memnunum.
-Teknik detaylara girdiğim devam yazısı: <a href='/staj-loglar%C4%B1-2-proje-raporu.html'> Staj Logları #2: Proje Raporu<a>
+Teknik detaylara girdiğim devam yazısı: <a href='/staj-log-2.html'> Staj Logları 2: Proje Raporu<a>
 
